--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,16 @@
 language: python
-sudo: false
 python:
-  - "3.5-dev"  # 3.5 development branch
-# command to install dependencies
+  - "3.5"
+
+cache: pip3
+
 install:
   - pip install -r requirements.txt
-# command to run tests
-script: pytest
+  - pip install coveralls
+  
+script:
+    - coverage run -m unittest
+    - coverage report
+    
+after_success:
+    - coveralls
