--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
   - pip install coveralls
   
 script:
-    - coverage run -m unittest
+    - py.test --cov=API
     - coverage report
     
 after_success:
