--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,10 @@
-autopep8==1.3.5
-coverage==4.5.1
-coveralls==1.3.0
-docopt==0.6.2
-execnet==1.5.0
-Flask==1.0.2
-Flask-JWT==0.3.2
-Flask-RESTful==0.3.6
-pylint==2.1.1
-pytest==3.7.2
-pytest-cov==2.5.1
-pytest-xdist==1.22.5
+autopep8
+coverage
+coveralls
+Flask
+Flask-RESTful
+pylint
+pytest
+pytest-cov
+pytest-xdist
 uwsgi
